Add doc about data directory configuration.